// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading > renders with custom message 1`] = `
<div
  aria-live="polite"
  class="MuiBox-root css-cgu1pl"
  role="status"
>
  <style>
    
  @keyframes pulse { 
    0%, 100% { opacity: 1; }
    50% { opacity: 0.5; }
  }

  @keyframes stretchdelay { 
    0%, 40%, 100% { transform: scaleY(0.4); }
    20% { transform: scaleY(1.0); }
  }

  @keyframes gradientSpin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  </style>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-h7apg-MuiCircularProgress-root"
    role="progressbar"
    style="width: 60px; height: 60px;"
  >
    <svg
      class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </span>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-3bo4sg-MuiTypography-root"
  >
    Fetching data...
  </h6>
</div>
`;

exports[`Loading > renders with default circular type and message 1`] = `
<div
  aria-live="polite"
  class="MuiBox-root css-cgu1pl"
  role="status"
>
  <style>
    
  @keyframes pulse { 
    0%, 100% { opacity: 1; }
    50% { opacity: 0.5; }
  }

  @keyframes stretchdelay { 
    0%, 40%, 100% { transform: scaleY(0.4); }
    20% { transform: scaleY(1.0); }
  }

  @keyframes gradientSpin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  </style>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-h7apg-MuiCircularProgress-root"
    role="progressbar"
    style="width: 60px; height: 60px;"
  >
    <svg
      class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </span>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-3bo4sg-MuiTypography-root"
  >
    Loading...
  </h6>
</div>
`;

exports[`Loading > renders with dots type 1`] = `
<div
  aria-live="polite"
  class="MuiBox-root css-cgu1pl"
  role="status"
>
  <style>
    
  @keyframes pulse { 
    0%, 100% { opacity: 1; }
    50% { opacity: 0.5; }
  }

  @keyframes stretchdelay { 
    0%, 40%, 100% { transform: scaleY(0.4); }
    20% { transform: scaleY(1.0); }
  }

  @keyframes gradientSpin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  </style>
  <div
    class="flex space-x-2 MuiBox-root css-0"
  >
    <div
      class="MuiBox-root css-rer8tm"
    />
    <div
      class="MuiBox-root css-gg2vn7"
    />
    <div
      class="MuiBox-root css-1g4f3kc"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-3bo4sg-MuiTypography-root"
  >
    Connecting...
  </h6>
</div>
`;

exports[`Loading > renders with gradient type 1`] = `
<div
  aria-live="polite"
  class="MuiBox-root css-cgu1pl"
  role="status"
>
  <style>
    
  @keyframes pulse { 
    0%, 100% { opacity: 1; }
    50% { opacity: 0.5; }
  }

  @keyframes stretchdelay { 
    0%, 40%, 100% { transform: scaleY(0.4); }
    20% { transform: scaleY(1.0); }
  }

  @keyframes gradientSpin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  </style>
  <div
    class="MuiBox-root css-5a3f38"
  >
    <div
      class="MuiBox-root css-1hmn2a4"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-3bo4sg-MuiTypography-root"
  >
    Synchronizing...
  </h6>
</div>
`;

exports[`Loading > renders with linear type 1`] = `
<div
  aria-live="polite"
  class="MuiBox-root css-cgu1pl"
  role="status"
>
  <style>
    
  @keyframes pulse { 
    0%, 100% { opacity: 1; }
    50% { opacity: 0.5; }
  }

  @keyframes stretchdelay { 
    0%, 40%, 100% { transform: scaleY(0.4); }
    20% { transform: scaleY(1.0); }
  }

  @keyframes gradientSpin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  </style>
  <span
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-g6um6d-MuiLinearProgress-root"
    role="progressbar"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-13noywk-MuiLinearProgress-bar1"
    />
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-4u5yhn-MuiLinearProgress-bar2"
    />
  </span>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-3bo4sg-MuiTypography-root"
  >
    Processing...
  </h6>
</div>
`;

exports[`Loading > renders with lines type 1`] = `
<div
  aria-live="polite"
  class="MuiBox-root css-cgu1pl"
  role="status"
>
  <style>
    
  @keyframes pulse { 
    0%, 100% { opacity: 1; }
    50% { opacity: 0.5; }
  }

  @keyframes stretchdelay { 
    0%, 40%, 100% { transform: scaleY(0.4); }
    20% { transform: scaleY(1.0); }
  }

  @keyframes gradientSpin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  </style>
  <div
    class="flex justify-between items-end MuiBox-root css-1aukhik"
  >
    <div
      class="MuiBox-root css-1670m6m"
    />
    <div
      class="MuiBox-root css-1fmaku4"
    />
    <div
      class="MuiBox-root css-11tc6kp"
    />
    <div
      class="MuiBox-root css-1x2eued"
    />
    <div
      class="MuiBox-root css-p59hc8"
    />
  </div>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-3bo4sg-MuiTypography-root"
  >
    Generating...
  </h6>
</div>
`;
